saving homework on mobile works & fixed loading mobile schedule layout

--- a/frontend/src/sass/dropdown.scss
+++ b/frontend/src/sass/dropdown.scss
@@ -171,8 +171,8 @@
         @media (max-width:1000px) {
         padding: 4px;
           a {
-            font-size: 14px;
-            padding-left: 18px;
+            font-size: 16px;
+            padding-left: 22px;
           }
         }
       }
