--- a/frontend/src/sass/schedule/mobile-schedule.scss
+++ b/frontend/src/sass/schedule/mobile-schedule.scss
@@ -48,6 +48,7 @@
     flex-direction: column;
     
     &__header {
+        margin-top: -2px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -56,7 +57,7 @@
 
         &__button {
             border: 1px dashed $light-blue;
-
+            margin: 2px 0;
             padding: 8px 0;
             flex: 1;
             text-align: center;
@@ -72,7 +73,7 @@
             }
 
             &.active {
-                background-color: $light-blue;
+                background-color: $toggle-blue;
                 &.dark {
                     background-color: $dark4 !important;
                 }
@@ -82,15 +83,15 @@
     }
 
     &__content {
-        padding: 4px 0;
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 4px;
+
         &__item {
             background-color: $table-white;
             border: 1px dashed $light-blue;
             width: 100%;
+            max-width: 550px;
             min-height: 40px;
 
             display: flex;
@@ -99,6 +100,7 @@
             align-items: center;
 
             padding: 8px;
+            margin: 2px 0;
             border-radius: 8px;
 
             &__time {
@@ -133,6 +135,25 @@
                 }
             }
 
+            &__no-lessons-text {
+                text-align: center;
+                padding: 2px 0;
+                padding-bottom: 4px;
+                font-size: 16px;
+                color: $light-grey2;
+            }
+
         }
+    }
+
+    &.loading {
+        padding-top: 4px;
+    }
+}
+
+.loading-indicator {
+    &.mobile {
+        top: 50%;
+        left: 43%;
     }
 }
