--- a/frontend/src/sass/variables.scss
+++ b/frontend/src/sass/variables.scss
@@ -1,7 +1,10 @@
 $lec: #21852d86;
 $upr: #1c4ba183;
 $lab: #a11c8b81;
+
+
 $light-blue: rgb(207, 222, 227); // для dashed border
+$toggle-blue: #deeeff;
 $great-blue: #62abff;
 $blue: #7fbafe;
 $deep-blue: #0F60D9;
